--- a/angular.json
+++ b/angular.json
@@ -94,11 +94,10 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+							"src/favicon.ico",
+							"src/assets",
+							"src/manifest.webmanifest"
+						],
             "styles": [
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
